[workspace]
resolver="2"
members = [".", "configurable-features-macros"]

[package]
name = "configurable-features"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
configurable-features-macros = {path="configurable-features-macros"}

[dependencies]
configurable-features-macros = {workspace=true}
once_cell = "1.21.3"
quote = "1.0.41"
serde = "1.0.228"
syn = "2.0.108"
toml = "0.9.8"
